# M2-VAE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base-config.yaml
configs/model/: default.yaml
configs/training/: debug.yaml  default.yaml
src/: extract_informative_latents.py  run_optuna.py  train.py  vae_model_bmi.py  vae_models.py
src/infra/: data.py  logging.py  seed.py
workflows/healthomics/: Dockerfile
