[project]
name = "m2-model"
version = "0.1.0"
description = "M2 model training"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "hydra-core>=1.3.2",
    "joblib>=1.5.3",
    "omegaconf>=2.3.0",
    "optuna>=4.7.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
